chart/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: liora-portfolio
  name: liora-portfolio
  namespace: iox-studio
spec:
  replicas: 1
  selector: 
    matchLabels:
      app: liora-portfolio
  template: 
    metadata: 
      labels:
        app: liora-portfolio
    spec:
      containers:
      - image: ioxweb/portfolio-masonry:1.0.2
        name: liora-portfolio
        ports:
        - containerPort: 1337
