chart/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: liora-portfolio-service
  namespace: iox-studio
spec:
  selector:
    app: liora-portfolio
  type: ClusterIP
  ports:
  - protocol: TCP
    port: 80
    targetPort: 1337
