chart/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: liora-portfolio-ingress
  namespace: iox-studio
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: liorajoseph.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: liora-portfolio-service
            port:  
              number: 80
